# OW-YW-VAD

./: .gitignore  README.md  baseline_results.csv  bootstrap.ps1  bootstrap.sh  deps.yaml  environment.yml  pyproject.toml  requirements-lock.txt
configs/: paper_main.yaml
configs/datasets/: shanghaitech.yaml  ubnormal.yaml  ucf_crime.yaml
configs/prompts/: default.yaml
configs/recipes/: ablation.yaml  hyper.yaml  paper_main.yaml  qualitative.yaml
owywvad/: __main__.py  cli.py  config.py  deps.py  utils.py
owywvad/data/: __init__.py  cache.py  datasets.py  fetch.py  manifests.py  prepare.py  registry.py
owywvad/eval/: __init__.py  evaluate.py  metrics.py
owywvad/infer/: __init__.py  runner.py
owywvad/losses/: __init__.py  objectives.py
owywvad/memory/: __init__.py  bank.py
owywvad/models/: __init__.py  model.py
owywvad/perception/: __init__.py  yoloworld.py
owywvad/priors/: __init__.py  dynamics.py
owywvad/prompts/: __init__.py  loader.py
owywvad/reproduce/: __init__.py  paper.py
owywvad/tokens/: __init__.py  builder.py
owywvad/tracking/: __init__.py  bytetrack.py
owywvad/train/: __init__.py  runner.py
owywvad/viz/: __init__.py  plots.py
scripts/: README.md
tests/: test_config.py  test_metrics.py  test_pipeline.py
